...
  var description by remember { mutableStateOf("") }
  var hourlyRate by remember { mutableStateOf("") }
  var location by remember { mutableStateOf("") }

  // État du menu déroulant pour l'occupation
  var expanded by remember { mutableStateOf(false) }
  val occupations = listOf("Carpenter", "Painter", "Plumber", "Electrician", "Mechanic")
  val filteredOccupations = occupations.filter { it.startsWith(typedOccupation, ignoreCase = true) }

  var textFieldSize by remember { mutableStateOf(Size.Zero) }
  val icon = Icons.Filled.ArrowDropDown

  Scaffold(
...
                    color = colorScheme.primary)
              }
            },
            navigationIcon = {
              IconButton(
                  onClick = { navigationActions.goBack() },
                  modifier = Modifier.testTag("goBackButton")) {
                    Icon(
                        Icons.Outlined.ArrowBack,
                        contentDescription = "Back",
                        tint = colorScheme.primary)
                  }
            },
...
                      },
                      placeholder = { Text("Select occupation") },
                      trailingIcon = {
                        IconButton(
                            onClick = { expanded = !expanded },
                            modifier =
                                Modifier.testTag("occupationDropdownIcon") // Ajout du testTag
                            ) {
                              Icon(imageVector = icon, contentDescription = "Dropdown Icon")
                            }
                      },
                      modifier =
                          Modifier.fillMaxWidth()
                              .testTag("occupationInput") // Ajout du testTag
                              .zIndex(0f)
                              .onGloballyPositioned { coordinates ->
                                textFieldSize = coordinates.size.toSize()
                              }
                              .background(
                                  color = MaterialTheme.colorScheme.surface,
...
                    value = description,
                    onValueChange = { description = it },
                    label = "Description",
                    modifier =
                        Modifier.fillMaxWidth()
                            .height(150.dp)
                            .testTag("descriptionInput"), // Ajout du testTag
                    singleLine = false,
                    color = MaterialTheme.colorScheme.onBackground)

                Spacer(modifier = Modifier.height(18.dp))

                // Champ de saisie pour le taux horaire
...
                QuickFixTextField(
                    value = hourlyRate,
                    onValueChange = { newValue ->
                      hourlyRate = newValue.filter { it.isDigit() || it == '.' || it == ',' }
                    },
                    label = "Hourly Rate",
                    modifier = Modifier.fillMaxWidth().testTag("hourlyRateInput"),
                    singleLine = true,
                    keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
                    color = MaterialTheme.colorScheme.onBackground,
                    trailingIcon = {
                      Text("CHF/h", color = MaterialTheme.colorScheme.onBackground)
                    })
...
                QuickDescription(description = "Location")

                QuickFixTextField(
                    value = location,
                    onValueChange = { location = it },
                    label = "Location",
                    modifier = Modifier.fillMaxWidth().testTag("locationInput"), // Ajout du testTag
                    singleLine = true,
                    color = MaterialTheme.colorScheme.onBackground)

                Spacer(modifier = Modifier.height(70.dp))

                // Validation Boutton
...
                                        Toast.LENGTH_SHORT)
                                    .show()
                              })
                        }
                            ?: Toast.makeText(context, "Profile not found!", Toast.LENGTH_SHORT)
                                .show()
                        errorMessage = ""
                      } else {
                        errorMessage = "Please fill all fields"
                        Toast.makeText(context, errorMessage, Toast.LENGTH_SHORT).show()
                      }
                    },
                    buttonColor = MaterialTheme.colorScheme.primary,
                    textColor = Color.White,
                    modifier = Modifier.fillMaxWidth().testTag("validateButton"))
                if (errorMessage.isNotEmpty()) {
                  Text(
                      text = errorMessage,
                      color = MaterialTheme.colorScheme.error,
                      style = MaterialTheme.typography.bodyMedium,
                      modifier = Modifier.padding(top = 8.dp).testTag("errorMessage"))
...
