...
    const val expandableCategoryItem = "expandableCategoryItem"
    const val subCategories = "subCategories"
    const val enterSubCateIcon = "enterSubCateIcon"
    const val subCategoryName = "subCategoryName"

    // UpgradeToWorker Screen
    const val upgradeToWorkerPager = "upgradeToWorkerPager"
    const val upgradeToWorkerTopBar = "upgradeToWorkerTopBar"
    const val upgradeToWorkerScaffold = "upgradeToWorkerScaffold"
    const val upgradeToWorkerPersonalInfo = "upgradeToWorkerPersonalInfo"

    // PersonalInfoScreen
    const val personalInfoScreendisplayNameField = "personalInfoScreen_displayNameField"
    const val personalInfoScreendescriptionField = "personalInfoScreen_descriptionField"
    const val personalInfoScreencancelButton = "personalInfoScreen_cancelButton"
...
